Fix bug 1580211: Add Support for strings with SelectExpressions (#1375)
Also:
* Remove unused param from renderInput()
* Styling: Enable scrollbars in rich editor
* In getEmptyMessage(), empty all simlpe elements, not just TextElements

--- a/frontend/src/modules/fluentoriginal/components/RichString.css
+++ b/frontend/src/modules/fluentoriginal/components/RichString.css
@@ -24,8 +24,12 @@
     padding: 0 4px;
 }
 
+.fluent-rich-string tr.indented > td > label {
+    margin-left: 10px;
+}
+
 .fluent-rich-string tr > td > span {
     box-sizing: border-box;
-    line-height: 24px;
+    line-height: 28px;
     margin: 2px 0;
 }
